--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
             color: var(--primary-light);
             margin-left: 5px;
         }
-    </style>
+        </style>
 </head>
 
 <body class="animate-me">
@@ -550,6 +550,9 @@
         <div class="scroll-container animate-me" data-delay="400">
             <div class="row movie-list" id="recommendedMovies">
                 <!-- Movies will be loaded here by JavaScript -->
+            </div>
+            <div class="btn-move-container">
+                <a class="btn-move" href="./animatedMovies.html">Xem Thêm</a>
             </div>
         </div>
 
