--- a/index.html
+++ b/index.html
@@ -63,12 +63,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(
-          0,
-          0,
-          0,
-          0.9
-        ); /* Tăng độ tối để không nhìn thấy nội dung phía sau */
+        background-color: rgba(255, 61, 0, 0.9); /* Màu đỏ cho overlay */
         z-index: 9999;
         display: flex;
         justify-content: center;
@@ -77,26 +72,14 @@
         background: var(--dark-bg);
       }
 
-      /* Thêm CSS cho animation */
-      .hidden-element {
-        opacity: 0;
-        transform: translateY(20px);
-        transition: opacity 0.8s ease, transform 0.8s ease;
-      }
-
-      .visible-element {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
       .loading-container {
         position: relative;
         border-radius: 50%;
         height: 96px;
         width: 96px;
         animation: rotate_3922 1.2s linear infinite;
-        background-color: #9b59b6;
-        background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+        background-color: #ff3d00; /* Màu đỏ cho container */
+        background-image: linear-gradient(#ff3d00, #ff9e80, #dc5a0f); 
       }
 
       .loading-container span {
@@ -104,8 +87,8 @@
         border-radius: 50%;
         height: 100%;
         width: 100%;
-        background-color: #9b59b6;
-        background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+        background-color: #ff3d00; 
+        background-image: linear-gradient(#ff3d00, #ff9e80, #dc5a0f); 
       }
 
       .loading-container span:nth-of-type(1) {
