--- a/search.html
+++ b/search.html
@@ -96,8 +96,8 @@
       height: 96px;
       width: 96px;
       animation: rotate_3922 1.2s linear infinite;
-      background-color: #9b59b6;
-      background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+      background-color: #ff3d00;
+      background-image: linear-gradient(#ff3d00, #ff9e80, #dc5a0f);
     }
 
     .loading-container span {
@@ -105,8 +105,8 @@
       border-radius: 50%;
       height: 100%;
       width: 100%;
-      background-color: #9b59b6;
-      background-image: linear-gradient(#9b59b6, #84cdfa, #5ad1cd);
+      background-color: #ff3d00;
+      background-image: linear-gradient(#ff3d00, #ff9e80, #dc5a0f);
     }
 
     .loading-container span:nth-of-type(1) {
