--- a/tvshow.html
+++ b/tvshow.html
@@ -736,6 +736,8 @@
     <script src="js/searchHandler.js"></script>
     <!-- TV Show API -->
     <script src="js/tvshowApi.js"></script>
+    <!-- Load Effects -->
+    <script src="js/pageLoadEffects.js"></script>
     <script>
       // Giả lập độ trễ 2 giây để kiểm tra
       setTimeout(function () {
@@ -748,6 +750,34 @@
           element.classList.add("visible");
         });
       }, 2000); // 2000ms = 2 giây
+      // Kiểm tra kích thước màn hình và thêm class 'show' cho dropdown-menu
+      document.addEventListener("DOMContentLoaded", function () {
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+        if (window.innerWidth > 768) {
+          // Kiểm tra nếu là desktop
+          dropdownMenu.classList.add("show");
+        } else {
+          dropdownMenu.classList.remove("show"); // Đảm bảo không có class 'show' trên mobile
+        }
+      });
+      // Navbar scroll effect
+      window.addEventListener("scroll", function () {
+        const navbar = document.querySelector(".navbar");
+        if (window.scrollY > 100) {
+          navbar.classList.add("scrolled");
+        } else {
+          navbar.classList.remove("scrolled");
+        }
+      });
+      // Cập nhật lại khi thay đổi kích thước cửa sổ
+      window.addEventListener("resize", function () {
+        const dropdownMenu = document.querySelector(".dropdown-menu");
+        if (window.innerWidth > 768) {
+          dropdownMenu.classList.add("show");
+        } else {
+          dropdownMenu.classList.remove("show");
+        }
+      });
     </script>
   </body>
 </html>
