--- a/phimbo.html
+++ b/phimbo.html
@@ -744,7 +744,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Search Handler -->
-    <script src="js/searchHsndler.js"></script>
+    <script src="js/searchHandler.js"></script>
     <!-- Phim Bộ API -->
     <script src="js/phimboApi.js"></script>
     <!-- Load Effects -->
