--- a/phimbo.html
+++ b/phimbo.html
@@ -586,12 +586,12 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./phimle.html">
+              <a class="nav-link" href="./phimle.html">
                 <i class="fas fa-film"></i> Phim Lẻ
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./phimbo.html">
+              <a class="nav-link active" href="./phimbo.html">
                 <i class="fas fa-tv"></i> Phim Bộ
               </a>
             </li>
