--- a/tvshow.html
+++ b/tvshow.html
@@ -666,7 +666,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./tvshow.html">
+              <a class="nav-link active" href="./tvshow.html">
                 <i class="fas fa-video"></i> TV Show
               </a>
             </li>
