--- a/animatedMovies.html
+++ b/animatedMovies.html
@@ -662,13 +662,24 @@
                     <span class="genre-pill">70+</span>
                   </a>
                 </li>
+                <li class="dropdown-item">
+                  <a class="nav-link" href="./tvshow.html">
+                    <i class="genre-pill"></i> TV Show
+                  </a>
+                </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./tvshow.html">
-                <i class="fas fa-video"></i> TV Show
-              </a>
-            </li>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="./bookmarks.html">
+                  <i class="fas fa-bookmark me-1"></i>
+                  Bookmarks
+                  <span class="bookmark-count badge bg-danger rounded-pill"
+                    >0</span
+                  >
+                </a>
+              </li>
+            </ul>
           </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
