--- a/index.html
+++ b/index.html
@@ -443,6 +443,53 @@
         color: var(--primary-light);
         margin-left: 5px;
       }
+
+      /* Bookmark count badge */
+      .bookmark-count {
+        position: absolute;
+        top: -5px;
+        right: -5px;
+        font-size: 10px;
+        padding: 3px 6px;
+        display: none;
+      }
+
+      /* Toast notification */
+      .toast-notification {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: rgba(0, 0, 0, 0.8);
+        color: white;
+        padding: 12px 20px;
+        border-radius: 4px;
+        z-index: 9999;
+        display: none;
+        animation: fadeIn 0.3s, fadeOut 0.3s 2.2s;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      }
+
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+          transform: translateY(0);
+        }
+        to {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+      }
     </style>
   </head>
 
@@ -562,6 +609,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Inside the navbar, add this to your navigation items -->
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" href="./index.html">
@@ -645,11 +693,23 @@
                     <span class="genre-pill">70+</span>
                   </a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="./tvshow.html">
+                    <i class="fas fa-video"></i> TV Show
+                    <span class="genre-pill">70+</span>
+                  </a>
+                </li>
               </ul>
             </li>
+          </ul>
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./tvshow.html">
-                <i class="fas fa-video"></i> TV Show
+              <a class="nav-link" href="./bookmarks.html">
+                <i class="fas fa-bookmark me-1"></i>
+                Bookmarks
+                <span class="bookmark-count badge bg-danger rounded-pill"
+                  >0</span
+                >
               </a>
             </li>
           </ul>
@@ -838,43 +898,79 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Animation Script -->
-    <script>
-      // Giả lập độ trễ 2 giây để kiểm tra
-      setTimeout(function () {
-        const loading = document.getElementById("loading");
-        loading.style.display = "none";
-      }, 2000); // 2000ms = 2 giây
+    <!-- Animation Script -->
+<script>
+  // Giả lập độ trễ 2 giây để kiểm tra
+  setTimeout(function () {
+    const loading = document.getElementById("loading");
+    loading.style.display = "none";
+  }, 2000); // 2000ms = 2 giây
 
-      // Navbar scroll effect
-      window.addEventListener("scroll", function () {
-        const navbar = document.querySelector(".navbar");
-        if (window.scrollY > 100) {
-          navbar.classList.add("scrolled");
-        } else {
-          navbar.classList.remove("scrolled");
-        }
-      });
-      // Kiểm tra kích thước màn hình và thêm class 'show' cho dropdown-menu
-      document.addEventListener("DOMContentLoaded", function () {
-        const dropdownMenu = document.querySelector(".dropdown-menu");
-        if (window.innerWidth > 768) {
-          // Kiểm tra nếu là desktop
-          dropdownMenu.classList.add("show");
-        } else {
-          dropdownMenu.classList.remove("show"); // Đảm bảo không có class 'show' trên mobile
-        }
-      });
+  // Navbar scroll effect
+  window.addEventListener("scroll", function () {
+    const navbar = document.querySelector(".navbar");
+    if (window.scrollY > 100) {
+      navbar.classList.add("scrolled");
+    } else {
+      navbar.classList.remove("scrolled");
+    }
+  });
 
-      // Cập nhật lại khi thay đổi kích thước cửa sổ
-      window.addEventListener("resize", function () {
-        const dropdownMenu = document.querySelector(".dropdown-menu");
-        if (window.innerWidth > 768) {
-          dropdownMenu.classList.add("show");
-        } else {
-          dropdownMenu.classList.remove("show");
-        }
-      });
-    </script>
+  // Kiểm tra kích thước màn hình và điều khiển dropdown
+  document.addEventListener("DOMContentLoaded", function () {
+    const dropdownMenu = document.querySelector(".dropdown-menu");
+    const dropdownToggle = document.querySelector("#categoryDropdown");
+
+    // Hàm kiểm tra và cập nhật trạng thái dropdown menu
+    function updateDropdown() {
+      if (window.innerWidth > 768) {
+        // Desktop: hiển thị dropdown menu mặc định
+        dropdownMenu.classList.add("show");
+        dropdownToggle.setAttribute("aria-expanded", "true");
+      } else {
+        // Mobile: ẩn dropdown menu mặc định
+        dropdownMenu.classList.remove("show");
+        dropdownToggle.setAttribute("aria-expanded", "false");
+      }
+    }
+
+    // Gọi hàm khi tải trang
+    updateDropdown();
+
+    // Cập nhật lại khi thay đổi kích thước cửa sổ
+    window.addEventListener("resize", function () {
+      updateDropdown();
+    });
+
+    // Xử lý sự kiện click/touch cho dropdown trên mobile
+    dropdownToggle.addEventListener("click", function (e) {
+      if (window.innerWidth <= 768) {
+        e.preventDefault(); // Ngăn chặn hành vi mặc định của link
+        e.stopPropagation(); // Ngăn chặn sự kiện lan ra ngoài
+        dropdownMenu.classList.toggle("show");
+        const isExpanded = dropdownMenu.classList.contains("show");
+        dropdownToggle.setAttribute("aria-expanded", isExpanded ? "true" : "false");
+      }
+    });
+
+    // Đóng dropdown khi click ra ngoài trên mobile
+    document.addEventListener("click", function (e) {
+      if (window.innerWidth <= 768 && !dropdownToggle.contains(e.target)) {
+        dropdownMenu.classList.remove("show");
+        dropdownToggle.setAttribute("aria-expanded", "false");
+      }
+    });
+  });
+  dropdownToggle.addEventListener("touchstart", function (e) {
+  if (window.innerWidth <= 768) {
+    e.preventDefault();
+    e.stopPropagation();
+    dropdownMenu.classList.toggle("show");
+    const isExpanded = dropdownMenu.classList.contains("show");
+    dropdownToggle.setAttribute("aria-expanded", isExpanded ? "true" : "false");
+  }
+}, { passive: false });
+</script>
 
     <!-- Search Handler -->
     <script src="js/searchHandler.js"></script>
