--- a/watchMovie.html
+++ b/watchMovie.html
@@ -582,7 +582,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="./index.html">
+              <a class="nav-link" href="./index.html">
                 <i class="fas fa-home"></i> Trang chủ
               </a>
             </li>
@@ -663,13 +663,23 @@
                     <span class="genre-pill">70+</span>
                   </a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="./tvshow.html">
+                    <i class="fas fa-video"></i> TV Show
+                    <span class="genre-pill">70+</span>
+                  </a>
+                </li>
               </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./tvshow.html">
-                <i class="fas fa-video"></i> TV Show
-              </a>
-            </li>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                  <a class="nav-link" href="./bookmarks.html">
+                      <i class="fas fa-bookmark me-1"></i>
+                      Bookmarks
+                      <span class="bookmark-count badge bg-danger rounded-pill">0</span>
+                  </a>
+              </li>
+          </ul>
           </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
