--- a/phimle.html
+++ b/phimle.html
@@ -580,6 +580,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Inside the navbar, add this to your navigation items -->
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">
@@ -671,17 +672,17 @@
                 </li>
               </ul>
             </li>
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="./bookmarks.html">
-                  <i class="fas fa-bookmark me-1"></i>
-                  Bookmarks
-                  <span class="bookmark-count badge bg-danger rounded-pill"
-                    >0</span
-                  >
-                </a>
-              </li>
-            </ul>
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./bookmarks.html">
+                <i class="fas fa-bookmark me-1"></i>
+                Bookmarks
+                <span class="bookmark-count badge bg-danger rounded-pill"
+                  >0</span
+                >
+              </a>
+            </li>
           </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
