--- a/search.html
+++ b/search.html
@@ -519,130 +519,129 @@
       </div>
     </div>
 
-    <!-- Navbar (giống như Home.html) -->
-    <!-- Enhanced Navbar -->
     <nav
-      class="navbar navbar-expand-lg navbar-dark animate-me"
-      data-delay="100"
-    >
-      <div class="container">
-        <a class="navbar-brand" href="./index.html">
-          <div class="logo-container">
-            <span class="logo-text">Yuki Movie</span>
-          </div>
-        </a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="./index.html">
-                <i class="fas fa-home"></i> Trang chủ
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./phimle.html">
-                <i class="fas fa-film"></i> Phim Lẻ
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./phimbo.html">
-                <i class="fas fa-tv"></i> Phim Bộ
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="categoryDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                <i class="fas fa-list"></i> Thể loại
-                <span class="category-badge">9</span>
-              </a>
-              <ul class="dropdown-menu show" aria-labelledby="categoryDropdown">
-                <li>
-                  <a class="dropdown-item" href="./animatedMovies.html">
-                    <i class="fas fa-dragon"></i> Hoạt Hình
-                    <span class="genre-pill">250+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./action.html">
-                    <i class="fas fa-running"></i> Hành Động
-                    <span class="genre-pill">180+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./comedy.html">
-                    <i class="fas fa-laugh"></i> Hài Hước
-                    <span class="genre-pill">120+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./romance.html">
-                    <i class="fas fa-heart"></i> Tình Cảm
-                    <span class="genre-pill">95+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./horror.html">
-                    <i class="fas fa-ghost"></i> Kinh Dị
-                    <span class="genre-pill">75+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./scifi.html">
-                    <i class="fas fa-rocket"></i> Khoa Học Viễn Tưởng
-                    <span class="genre-pill">60+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./adventure.html">
-                    <i class="fas fa-mountain"></i> Phiêu Lưu
-                    <span class="genre-pill">85+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./fantasy.html">
-                    <i class="fas fa-hat-wizard"></i> Thần Thoại
-                    <span class="genre-pill">45+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./crime.html">
-                    <i class="fas fa-mask"></i> Tội Phạm
-                    <span class="genre-pill">70+</span>
-                  </a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="./tvshow.html">
-                    <i class="fas fa-video"></i> TV Show
-                    <span class="genre-pill">70+</span>
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="./bookmarks.html">
-                  <i class="fas fa-bookmark me-1"></i>
-                  Bookmarks
-                  <span class="bookmark-count badge bg-danger rounded-pill"
-                    >0</span
-                  >
-                </a>
-              </li>
-            </ul>
-          </ul>
+   class="navbar navbar-expand-lg navbar-dark animate-me"
+   data-delay="100"
+ >
+   <div class="container">
+     <a class="navbar-brand" href="./index.html">
+       <div class="logo-container">
+         <span class="logo-text">Yuki Movie</span>
+       </div>
+     </a>
+     <button
+       class="navbar-toggler"
+       type="button"
+       data-bs-toggle="collapse"
+       data-bs-target="#navbarNav"
+     >
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarNav">
+       <!-- Inside the navbar, add this to your navigation items -->
+       <ul class="navbar-nav">
+         <li class="nav-item">
+           <a class="nav-link" href="./index.html">
+             <i class="fas fa-home"></i> Trang chủ
+           </a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="./phimle.html">
+             <i class="fas fa-film"></i> Phim Lẻ
+           </a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="./phimbo.html">
+             <i class="fas fa-tv"></i> Phim Bộ
+           </a>
+         </li>
+         <li class="nav-item dropdown">
+           <a
+             class="nav-link dropdown-toggle"
+             href="#"
+             id="categoryDropdown"
+             role="button"
+             data-bs-toggle="dropdown"
+             aria-expanded="false"
+           >
+             <i class="fas fa-list"></i> Thể loại
+             <span class="category-badge">9</span>
+           </a>
+           <ul class="dropdown-menu show" aria-labelledby="categoryDropdown">
+             <li>
+               <a class="dropdown-item" href="./animatedMovies.html">
+                 <i class="fas fa-dragon"></i> Hoạt Hình
+                 <span class="genre-pill">250+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./action.html">
+                 <i class="fas fa-running"></i> Hành Động
+                 <span class="genre-pill">180+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./comedy.html">
+                 <i class="fas fa-laugh"></i> Hài Hước
+                 <span class="genre-pill">120+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./romance.html">
+                 <i class="fas fa-heart"></i> Tình Cảm
+                 <span class="genre-pill">95+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./horror.html">
+                 <i class="fas fa-ghost"></i> Kinh Dị
+                 <span class="genre-pill">75+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./scifi.html">
+                 <i class="fas fa-rocket"></i> Khoa Học Viễn Tưởng
+                 <span class="genre-pill">60+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./adventure.html">
+                 <i class="fas fa-mountain"></i> Phiêu Lưu
+                 <span class="genre-pill">85+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./fantasy.html">
+                 <i class="fas fa-hat-wizard"></i> Thần Thoại
+                 <span class="genre-pill">45+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./crime.html">
+                 <i class="fas fa-mask"></i> Tội Phạm
+                 <span class="genre-pill">70+</span>
+               </a>
+             </li>
+             <li>
+               <a class="dropdown-item" href="./tvshow.html">
+                 <i class="fas fa-video"></i> TV Show
+                 <span class="genre-pill">70+</span>
+               </a>
+             </li>
+           </ul>
+         </li>
+       </ul>
+       <ul class="navbar-nav ms-auto">
+         <li class="nav-item">
+           <a class="nav-link" href="./bookmarks.html">
+             <i class="fas fa-bookmark me-1"></i>
+             Bookmarks
+             <span class="bookmark-count badge bg-danger rounded-pill"
+               >0</span
+             >
+           </a>
+         </li>
+       </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
               class="form-control"
