--- a/tvshow.html
+++ b/tvshow.html
@@ -57,7 +57,6 @@
       }
 
       /* Loader Animation */
-      /* Loader Animation */
       .loading-overlay {
         position: fixed;
         top: 0;
@@ -580,6 +579,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Inside the navbar, add this to your navigation items -->
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">
@@ -610,7 +610,7 @@
               </a>
               <ul class="dropdown-menu show" aria-labelledby="categoryDropdown">
                 <li>
-                  <a class="dropdown-item active" href="./animatedMovies.html">
+                  <a class="dropdown-item" href="./animatedMovies.html">
                     <i class="fas fa-dragon"></i> Hoạt Hình
                     <span class="genre-pill">250+</span>
                   </a>
@@ -671,15 +671,17 @@
                 </li>
               </ul>
             </li>
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="./bookmarks.html">
-                      <i class="fas fa-bookmark me-1"></i>
-                      Bookmarks
-                      <span class="bookmark-count badge bg-danger rounded-pill">0</span>
-                  </a>
-              </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./bookmarks.html">
+                <i class="fas fa-bookmark me-1"></i>
+                Bookmarks
+                <span class="bookmark-count badge bg-danger rounded-pill"
+                  >0</span
+                >
+              </a>
+            </li>
           </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
@@ -700,8 +702,10 @@
     <!-- Main Content -->
     <div class="container mt-4">
       <h2>TV Show</h2>
-      <div class="row" id="movieList">
-        <!-- Movies will be loaded here by JavaScript -->
+      <div class="scroll-container animate-me" data-delay="400">
+        <div class="row movie-list" id="movieList">
+          <!-- Movies will be loaded here by JavaScript -->
+        </div>
       </div>
 
       <!-- Phân trang -->
