--- a/animatedMovies.html
+++ b/animatedMovies.html
@@ -506,7 +506,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="https://scontent.fsgn24-1.fna.fbcdn.net/v/t39.30808-6/476150100_122173743422281145_3814307825521509060_n.jpg?stp=dst-jpg_s600x600_tt6&_nc_cat=109&ccb=1-7&_nc_sid=127cfc&_nc_ohc=Nq2XDjFlSjgQ7kNvgGlKR8Q&_nc_oc=AdgQKGeQISRMuBGcqXmB2-6MlaxmBC-bnKr6vTsXV3runkI4ui5ZCPGaEan2l2qalQ-NqFFHEzPcpRb8U8XF6iZe&_nc_zt=23&_nc_ht=scontent.fsgn24-1.fna&_nc_gid=ADZE0qn70G7OkwdJVNd2szr&oh=00_AYAl-Jzab78MFKefxJYWf_gyz7qbNW0G90725dhLkVm9fA&oe=67B9C156"
+              src="https://phimimg.com/upload/vod/20250401-1/15ab468833d55309ed5399a96fdd5ca2.jpg"
               class="d-block w-100"
               alt="Image 1"
             />
@@ -616,7 +616,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./action.html">
+                  <a class="dropdown-item" href="./ActionMovie.html">
                     <i class="fas fa-running"></i> Hành Động
                     <span class="genre-pill">180+</span>
                   </a>
