--- a/ActionMovie.html
+++ b/ActionMovie.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Xem Phim - Yuki Movie</title>
+    <title>Yuki Movie - Hoạt Hình</title>
 
     <!-- Preconnect to required origins -->
     <link rel="preconnect" href="https://phimapi.com" />
@@ -57,13 +57,19 @@
       }
 
       /* Loader Animation */
+      /* Loader Animation */
       .loading-overlay {
         position: fixed;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(255, 61, 0, 0.9); /* Màu đỏ cho overlay */
+        background-color: rgba(
+          0,
+          0,
+          0,
+          0.9
+        ); /* Tăng độ tối để không nhìn thấy nội dung phía sau */
         z-index: 9999;
         display: flex;
         justify-content: center;
@@ -72,13 +78,25 @@
         background: var(--dark-bg);
       }
 
+      /* Thêm CSS cho animation */
+      .hidden-element {
+        opacity: 0;
+        transform: translateY(20px);
+        transition: opacity 0.8s ease, transform 0.8s ease;
+      }
+
+      .visible-element {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
       .loading-container {
         position: relative;
         border-radius: 50%;
         height: 96px;
         width: 96px;
         animation: rotate_3922 1.2s linear infinite;
-        background-color: #ff3d00; /* Màu đỏ cho container */
+        background-color: #ff3d00;
         background-image: linear-gradient(#ff3d00, #ff9e80, #dc5a0f);
       }
 
@@ -128,6 +146,7 @@
           transform: rotate(360deg);
         }
       }
+
       /* Enhanced Navbar */
       .navbar {
         background-color: rgba(19, 20, 25, 0.95) !important;
@@ -403,7 +422,7 @@
         box-shadow: 0 0 0 0.25rem rgba(255, 61, 0, 0.25);
       }
 
-      .btn-outline-light {
+      .search-btn {
         position: absolute;
         right: 5px;
         top: 5px;
@@ -423,7 +442,7 @@
         transition: all 0.3s ease;
       }
 
-      .btn-outline-light:hover {
+      .search-btn:hover {
         transform: scale(1.1);
         background: linear-gradient(
           135deg,
@@ -442,134 +461,11 @@
         color: var(--primary-light);
         margin-left: 5px;
       }
-
-      /* Video Player Styles */
-      .video-container {
-        background-color: var(--dark-bg-lighter);
-        border-radius: 8px;
-        overflow: hidden;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        margin-bottom: 30px;
-      }
-
-      .video-title {
-        padding: 15px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .video-title h2 {
-        margin: 0;
-        font-size: 1.5rem;
-        color: var(--text-light);
-      }
-
-      .video-player {
-        position: relative;
-        padding-top: 56.25%; /* 16:9 Aspect Ratio */
-      }
-
-      .video-player iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-      }
-
-      /* Episode List Styles */
-      .episode-section {
-        background-color: var(--dark-bg-lighter);
-        border-radius: 8px;
-        padding: 20px;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-      }
-
-      .server-name {
-        color: var(--primary-light);
-        font-size: 1.2rem;
-        margin-bottom: 15px;
-        padding-bottom: 8px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-      }
-
-      .episode-grid {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-      }
-
-      .episode-button {
-        background-color: rgba(255, 255, 255, 0.1);
-        color: var(--text-light);
-        border: 1px solid transparent;
-        border-radius: 5px;
-        padding: 8px 15px;
-        transition: all 0.3s ease;
-        cursor: pointer;
-      }
-
-      .episode-button:hover {
-        background-color: var(--primary-color);
-        transform: translateY(-2px);
-      }
-
-      .episode-button.active {
-        background-color: var(--primary-color);
-        border-color: var(--primary-light);
-      }
-
-      .back-to-details {
-        margin-bottom: 20px;
-        display: inline-block;
-        color: #17a2b8;
-        text-decoration: none;
-        transition: color 0.3s ease;
-        font-size: 1.2rem;
-      }
-
-      .back-to-details:hover {
-        color: var(--primary-light);
-      }
-
-      .back-to-details i {
-        margin-right: 5px;
-      }
-
-      @media (max-width: 768px) {
-        .episode-grid {
-          gap: 5px;
-        }
-
-        .episode-button {
-          padding: 6px 10px;
-          font-size: 0.9rem;
-        }
-      }
-      /* Bookmark count badge */
-      .bookmark-count {
-        position: absolute;
-        top: -5px;
-        right: -5px;
-        font-size: 10px;
-        padding: 3px 6px;
-        display: none; /* Ẩn mặc định */
-        background-color: var(--primary-color);
-        color: white;
-        border-radius: 50%;
-        font-weight: bold;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        transition: all 0.3s ease;
-      }
-
-      /* Hiển thị badge khi có bookmark */
-      .bookmark-count:not(:empty) {
-        display: inline-block;
-      }
     </style>
   </head>
-  <body>
-    <!-- Loading Overlay -->
+
+  <body class="animate-me">
+    <!-- Loader -->
     <div class="loading-overlay" id="loading">
       <div class="loading-container">
         <span></span>
@@ -578,6 +474,90 @@
         <span></span>
       </div>
     </div>
+    <!-- Carousel Header -->
+    <header class="animate-me" data-delay="200">
+      <div
+        id="carouselExample"
+        class="carousel slide carousel-fade"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="https://phimimg.com/upload/vod/20250401-1/15ab468833d55309ed5399a96fdd5ca2.jpg"
+              class="d-block w-100"
+              alt="Image 1"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Khám Phá Thế Giới Phim Ảnh</h3>
+              <p>Trải nghiệm những bộ phim đỉnh cao cùng Yuki Movie</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://phimimg.com/upload/vod/20240118-1/290650828b2ef3b9e4a63ce422a5919a.jpg"
+              class="d-block w-100"
+              alt="Image 2"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Anime & Hoạt Hình</h3>
+              <p>Bộ sưu tập phim hoạt hình đa dạng và phong phú</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="https://phimimg.com/upload/vod/20250224-1/45661fa96f864849ba1272a970e8fede.jpg"
+              class="d-block w-100"
+              alt="Image 3"
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h3>Bộ Sưu Tập Đặc Sắc</h3>
+              <p>Phim Lẻ, Phim Bộ & TV Show đầy đủ thể loại</p>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </header>
 
     <!-- Enhanced Navbar -->
     <nav
@@ -607,12 +587,13 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="./bookmarks.html">
-                <i class="fas fa-bookmark me-1"></i>
-                Bookmarks
-                <span class="bookmark-count badge bg-danger rounded-pill"
-                  >0</span
-                >
+              <a class="nav-link" href="./phimle.html">
+                <i class="fas fa-film"></i> Phim Lẻ
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./phimbo.html">
+                <i class="fas fa-tv"></i> Phim Bộ
               </a>
             </li>
             <li class="nav-item dropdown">
@@ -635,7 +616,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./ActionMovie.html">
+                  <a class="dropdown-item active" href="./ActionMovie.html">
                     <i class="fas fa-running"></i> Hành Động
                     <span class="genre-pill">180+</span>
                   </a>
@@ -691,6 +672,17 @@
               </ul>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="./bookmarks.html">
+                <i class="fas fa-bookmark me-1"></i>
+                Bookmarks
+                <span class="bookmark-count badge bg-danger rounded-pill"
+                  >0</span
+                >
+              </a>
+            </li>
+          </ul>
           <form class="d-flex ms-auto search-form" onsubmit="return false;">
             <input
               class="form-control"
@@ -698,7 +690,7 @@
               id="searchInput"
               placeholder="Tìm kiếm phim..."
             />
-            <button class="btn-outline-light" type="button">
+            <button class="btn search-btn" type="button">
               <i class="fas fa-search"></i>
             </button>
             <div class="search-suggestions" id="searchSuggestions"></div>
@@ -709,94 +701,55 @@
 
     <!-- Main Content -->
     <div class="container mt-4">
-      <div id="movieInfo">
-        <!-- Movie info will be loaded here -->
-      </div>
-
-      <a href="#" id="backToDetails" class="back-to-details">
-        <i class="fas fa-arrow-left"></i> Quay lại trang chi tiết
-      </a>
-
-      <div class="video-container">
-        <div class="video-title">
-          <h2 id="episodeTitle">Đang tải...</h2>
-        </div>
-        <div class="video-player" id="videoPlayer">
-          <!-- Video player will be loaded here -->
+      <h2 class="section-title animate-me" data-delay="300">
+        <i class="fas fa-dragon me-2"></i>Phim Hoạt Hình
+      </h2>
+      <div class="scroll-container animate-me" data-delay="400">
+        <div class="row movie-list" id="movieList">
+          <!-- Movies will be loaded here by JavaScript -->
         </div>
       </div>
 
-      <div class="episode-section mt-4">
-        <h3 class="mb-4">Danh sách tập phim</h3>
-        <div id="episodeList">
-          <!-- Episodes will be loaded here -->
-        </div>
-      </div>
+      <!-- Thêm phân trang -->
+      <nav
+        aria-label="Page navigation"
+        class="mt-4 animate-me"
+        data-delay="700"
+      >
+        <ul class="pagination justify-content-center" id="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Previous" id="prevPage">
+              <span aria-hidden="true"
+                ><i class="fas fa-chevron-left"></i
+              ></span>
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#" data-page="1">1</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#" data-page="2">2</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#" data-page="3">3</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#" aria-label="Next" id="nextPage">
+              <span aria-hidden="true"
+                ><i class="fas fa-chevron-right"></i
+              ></span>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <!-- Footer -->
-    <footer class="bg-dark text-light mt-5 py-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <h5 class="mb-3 border-start border-danger border-4 ps-2">
-              Về Yuki Movie
-            </h5>
-            <p>
-              Trang website tạo ra nhằm mục đích học tập và làm quen với các kỹ
-              năng lập trình. Nội dung trang web không có mục đích thương mại.
-            </p>
-          </div>
-          <div class="col-md-4 mb-3">
-            <h5 class="mb-3 border-start border-danger border-4 ps-2">
-              Liên kết nhanh
-            </h5>
-            <ul class="list-unstyled">
-              <li>
-                <a href="./index.html" class="text-light text-decoration-none"
-                  ><i class="fas fa-angle-right me-2"></i>Trang chủ</a
-                >
-              </li>
-              <li>
-                <a href="./phimle.html" class="text-light text-decoration-none"
-                  ><i class="fas fa-angle-right me-2"></i>Phim Lẻ</a
-                >
-              </li>
-              <li>
-                <a href="./phimbo.html" class="text-light text-decoration-none"
-                  ><i class="fas fa-angle-right me-2"></i>Phim Bộ</a
-                >
-              </li>
-              <li>
-                <a href="./tvshow.html" class="text-light text-decoration-none"
-                  ><i class="fas fa-angle-right me-2"></i>TV Show</a
-                >
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h5 class="mb-3 border-start border-danger border-4 ps-2">
-              Kết nối
-            </h5>
-            <div class="social-icons">
-              <a href="#" class="text-light me-2"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="#" class="text-light me-2"
-                ><i class="fab fa-twitter"></i
-              ></a>
-              <a href="#" class="text-light me-2"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="#" class="text-light me-2"
-                ><i class="fab fa-youtube"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-        <hr class="mt-4 mb-3" />
-        <p class="text-center mb-0">
-          &copy; 2025 YukiMovie. Tất cả các quyền được bảo lưu.
+    <footer class="bg-dark text-light mt-5 py-3">
+      <div class="container text-center">
+        <p>
+          &copy; 2025 YukiMovie. Trang Website tạo ra nhằm mục đích học tập và
+          làm quen với các kỹ năng lập trình
         </p>
       </div>
     </footer>
@@ -805,14 +758,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Search Handler -->
     <script src="js/searchHandler.js"></script>
-    <!-- Watch Movie JS -->
-    <script src="js/watchMovie.js"></script>
+    <!-- Phim Bộ API -->
+    <script src="js/actionMovies.js"></script>
+    <!-- Load Effects -->
+    <script src="js/pageLoadEffects.js"></script>
+
     <script>
-      // Giả lập độ trễ 1.5 giây để kiểm tra
+      // Giả lập độ trễ 2 giây để kiểm tra
       setTimeout(function () {
         const loading = document.getElementById("loading");
         loading.style.display = "none";
-      }, 1500);
+      }, 2000); // 2000ms = 2 giây
 
       // Navbar scroll effect
       window.addEventListener("scroll", function () {
@@ -823,7 +779,6 @@
           navbar.classList.remove("scrolled");
         }
       });
-
       // Kiểm tra kích thước màn hình và thêm class 'show' cho dropdown-menu
       document.addEventListener("DOMContentLoaded", function () {
         const dropdownMenu = document.querySelector(".dropdown-menu");
