--- a/bookmarks.html
+++ b/bookmarks.html
@@ -339,7 +339,7 @@
         padding-left: 20px;
         padding-right: 50px;
         transition: all 0.3s ease;
-      }
+        }
 
       .form-control:focus {
         background-color: rgba(255, 255, 255, 0.15);
@@ -445,7 +445,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./action.html">
+                  <a class="dropdown-item" href="./ActionMovie.html">
                     <i class="fas fa-running"></i> Hành Động
                     <span class="genre-pill">180+</span>
                   </a>
