--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/carousel.css">
 
     <style>
       :root {
@@ -646,7 +647,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./action.html">
+                  <a class="dropdown-item" href="./ActionMovie.html">
                     <i class="fas fa-running"></i> Hành Động
                     <span class="genre-pill">180+</span>
                   </a>
@@ -732,9 +733,18 @@
     <!-- Main Content -->
     <div class="container mt-4">
       <h2 class="section-title animate-me" data-delay="300">
+        <i class="fas fa-film me-2"></i>Phim nổi bật
+      </h2>
+      
+      <!-- 3D Carousel Section -->
+      <div class="carousel-container animate-me" data-delay="400">
+        <!-- Carousel content will be loaded by JavaScript -->
+      </div>
+
+      <h2 class="section-title animate-me" data-delay="500">
         <i class="fas fa-heart me-2"></i>Phim hoạt hình
       </h2>
-      <div class="scroll-container animate-me" data-delay="400">
+      <div class="scroll-container animate-me" data-delay="600">
         <div class="row movie-list" id="recommendedMovies">
           <!-- Movies will be loaded here by JavaScript -->
         </div>
@@ -793,7 +803,25 @@
         </div>
       </div>
 
-      <!-- Thêm phân trang -->
+      <!-- Replace your existing carousel with this -->
+      <div id="movieCarousel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+              <!-- Indicators will be added by JavaScript -->
+          </div>
+          <div class="carousel-inner">
+              <!-- Movie cards will be added by JavaScript -->
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#movieCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#movieCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+          </button>
+      </div>
+
+      <!-- Thêm phan trang -->
       <nav
         aria-label="Page navigation"
         class="mt-4 animate-me"
@@ -900,7 +928,7 @@
       setTimeout(function () {
         const loading = document.getElementById("loading");
         loading.style.display = "none";
-      }, 2000); // 2000ms = 2 giây
+      }, 1000); // 2000ms = 2 giây
 
       // Navbar scroll effect
       window.addEventListener("scroll", function () {
@@ -935,9 +963,8 @@
 
     <!-- Search Handler -->
     <script src="js/searchHandler.js"></script>
-    <!-- Custom JS -->
-    <script src="js/main.js"></script>
     <!-- Movie API -->
     <script src="js/movieApi.js"></script>
+    <script src="js/carousel.js"></script>
   </body>
 </html>
