--- a/tvshow.html
+++ b/tvshow.html
@@ -616,7 +616,7 @@
                   </a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="./action.html">
+                  <a class="dropdown-item" href="./ActionMovie.html">
                     <i class="fas fa-running"></i> Hành Động
                     <span class="genre-pill">180+</span>
                   </a>
